# cicd-workflow

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
config/: config.properties  log4j.properties
logs/config/: 20240712214041605-startup.cfg  20240712214113256-shutdown.cfg  20240712214240104-startup.cfg  20240712214931266-shutdown.cfg  20240712221017878-startup.cfg  20240712221105184-shutdown.cfg  20240712221211223-startup.cfg  20240712221704282-shutdown.cfg  20240712221731361-startup.cfg  20240712222609496-shutdown.cfg  20240712222649387-startup.cfg  20240712222903149-shutdown.cfg  20240712222939995-startup.cfg  20240712222954062-shutdown.cfg  20240712223108581-startup.cfg  20240712223118444-shutdown.cfg  20240712223223856-startup.cfg  20240712223227594-shutdown.cfg  20240712223317950-startup.cfg  20240712223632718-shutdown.cfg  20240712223702889-startup.cfg  20240712223739398-shutdown.cfg  20240712223808602-startup.cfg  20240712223943402-shutdown.cfg  20240712224000558-startup.cfg  20240712224039395-shutdown.cfg  20240712224256511-startup.cfg  20240712224841418-shutdown.cfg  20240712224859046-startup.cfg  20240712224936795-shutdown.cfg  20240712225013805-startup.cfg  20240712225115332-shutdown.cfg  20240712225126317-startup.cfg  20240712225201523-shutdown.cfg  20240712225306925-startup.cfg  20240712225446245-shutdown.cfg  20240712225459107-startup.cfg  20240712225641545-shutdown.cfg  (+30 more)
model_store/: doubleit_model.mar
src/: doubleit_model.pt  inference.py  model.py
terraform/: main.tf  variables.tf
tests/: test_inference.py
